# fastapi-celery

./: docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 513c70bbf8d1_.py  7eb978859e63_.py
app/: broadcast_utils.py  celery.py  celery_utils.py  config.py  database.py  main.py
app/users/: models.py  tasks.py  views.py
app/users/templates/: form.html
app/ws/: views.py
compose/local/fastapi/: Dockerfile  start
compose/local/fastapi/celery/flower/: start
compose/local/fastapi/celery/worker/: start
