[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["César Castañón <cesar.castanon@piperlab.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.79.0,"
uvicorn = {version = "0.20.0", extras = ["standard"]}
celery = "5.2.7"
redis = "4.3.4"
flower = "1.2.0"
SQLAlchemy = "1.4.40"
alembic = "1.8.1"
psycopg2-binary = "2.9.3"
watchfiles = "^0.18.1"
Jinja2 = "^3.1.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
